--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -181,6 +181,10 @@ body {
 	display: inline;
 }
 
+#footer_inner a:hover {
+	text-decoration: underline;
+}
+
 #footer_copyright {
 	color: #7C7C7C;
 	font-size: 11px;
@@ -189,7 +193,7 @@ body {
 	text-align: center;
 	max-width: 900px;
 }
-	
+
 #servertime {
 	float: right;
 	padding-right: 15px;
@@ -296,7 +300,7 @@ body {
 	text-align: center;
 	text-decoration: none;
 }
-	
+
 .sidebar_navi a:hover {
 	background: #EEEEEE;
 }
@@ -705,26 +709,26 @@ fieldset.title legend {
 		position: fixed;
 		z-index: 10000000;
 	}
-	
+
 	#header_logo {
 		display: block;
 		float: right;
 		/*margin: -8px -30px -12px 0px;*/
 		margin: -8px -20px -12px 0px;
 	}
-	
+
 	#header_logo img {
 		height: 36px;
 	}
-	
+
 	#header_navi .mobile_menu_content {
 		display: none;
 	}
-	
+
 	#header_navi a {
 		display: block;
 	}
-	
+
 	#header_navi {
 		background: none;
 		display: -webkit-flex;
@@ -734,7 +738,7 @@ fieldset.title legend {
 		-moz-flex-flow: row wrap;
 		flex-flow: row wrap;
 	}
-	
+
 	#header_navi .mobile_menu {
 		cursor: pointer;
 		display: inline-block;
@@ -744,7 +748,7 @@ fieldset.title legend {
 		flex: 0 0 auto;
 		height: 20px;
 	}
-	
+
 	#header_navi label img {
 		vertical-align: bottom;
 	}
@@ -757,25 +761,25 @@ fieldset.title legend {
 		flex: 0 0 auto;
 		margin-top: -5px;
 	}
-	
+
 	#content {
 		padding: 72px 10px 10px 10px;
 	}
-	
+
 	#footer {
 		text-align: center;
 	}
-	
+
 	#footer a {
 		margin: 0px 5px 0px 5px;
 	}
-	
+
 	#servertime {
 		display: block;
 		float: none;
 		padding: 15px 0 0 0;
 	}
-	
+
 	#feedback {
 		left: 0;
 		margin-left: 0px;
@@ -784,7 +788,7 @@ fieldset.title legend {
 		width: 900px;
 		z-index: 9999999;
 	}
-	
+
 	.sidebar {
 		width: auto;
 		float: none;
