--- a/public_html/templates/settings/pic.html
+++ b/public_html/templates/settings/pic.html
@@ -19,6 +19,10 @@
 						<td><strong>Slim-Header aktivieren?</strong></td>
 						<td><input type="checkbox" name="slim_header" value="checked" {if="$config_slim_header"}checked{/if} /></td>
 					</tr>
+					<tr>
+						<td><strong>Header im Responsive-Design fixieren?</strong></td>
+						<td><input type="checkbox" name="fixed_header" value="checked" {if="$config_fixed_header"}checked{/if} /></td>
+					</tr>
 				</table>
 			</div>
 			<div class="inner">
