Integration von Pushbullet

--- a/public_html/templates/settings.html
+++ b/public_html/templates/settings.html
@@ -17,6 +17,9 @@
 					<td><a href="?s=settings&amp;do=update">Update</a></td>
 					<td><a href="?s=settings&amp;do=trouble-shooting">Problembehandlung</a></td>
 				</tr>
+				<tr>
+					<td><a href="?s=settings&amp;do=notification">Benachrichtigung</a></td>
+				</tr>
 			</table>
 		</div>
 	</div>
