--- a/public_html/templates/overview.html
+++ b/public_html/templates/overview.html
@@ -36,6 +36,7 @@
 					</td>
 				</tr>
 			</table>
+			<a href="https://www.yahoo.com/?ilc=401" target="_blank" style="float: right; margin-right: -22px;"><img src="public_html/img/yahoo.png" width="100px" /></a>
 	{/if}
 		</div>
 	</div>
